feat(reporter): add DPWG drug data